2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_set_property),
	(mud_subwindow_set_terminal_font): Removed debug logging. Now updates
	VTE grid when font is changed.
	* src/zmp/zmp-subwindow.c (zmp_subwindow_open): Now displays the
	window before attempting to resize.  This allows the vte terminal to
	resize properly.

2009-03-17  Les Harris  <lharris@gnome.org>

	* src/Makefile.am: Added mud-subwindow.[ch]
	* src/mud-subwindow.[ch]: New files which implement a sub-output
	window.
	* src/gnome-mud-marshallers.list: Added VOID:UINT,UINT
	* src/handlers/mud-telnet-zmp.c: Added property for ZmpMain.
	* src/mud-connection-view.[ch]: Added api which creates and manages
	subwindows.
	* src/zmp/zmp-core.c: Added property to parent MudTelnetZMP
	* src/zmp/zmp-main.[ch]: Added zmp_main_get_package_by_name
	* src/zmp/zmp-package-interface.c: Added parent MudTelnetZMP property.
	* src/zmp/zmp-subwindow.[ch]: Implements the zmp subwindow package.
	* ui/main.glade: Added ui for MudSubwindow.

2009-03-17  Les Harris  <lharris@gnome.org>

	* src/handlers/mud-telnet-zmp.c: Now uses ZmpMain to query for zmp
	packages.
	* src/handlers/mud-telnet-zmp.h: Made some methods public for
	ZmpPackages to use.
	* src/zmp/Makefile.am: Added zmp-core.[ch], zmp-main.[ch],
	zmp-package-interface.[ch], zmp-subwindow.[ch]
	* src/zmp/zmp-core.[ch]:
	* src/zmp/zmp-main.[ch]: Manager class that manages ZmpPackages.
	* src/zmp/zmp-package-interface.[ch]: New files which implement
	ZmpPackageInterface which is used by all ZmpPackages.
	* src/zmp/zmp-package-interface.h:
	* src/zmp/zmp-subwindow.[ch]: Skeleton for zmp subwindow package
	support.

2009-03-17  Les Harris  <lharris@gnome.org>

	* autogen.sh: Updated to newest.
	* configure.ac: Added AC_PROG_LIBTOOL. Added entries for
	handlers/Makefile and zmp/Makefile
	* src/Makefile.am: Telnet Handlers and ZMP packages (that are
	implemented in C as part of gnome-mud) are now compiled as static